# glymphopt

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  Snakefile  _config.yml  copy-deps.sh  cspell.config.yaml  data.hdf  depfiles.txt  environment.yml  output.html  pyproject.toml
debug/: debug.py
docs/: notes.md
notebooks/: 1D Image2Function.ipynb  3D Image2Function.ipynb  data-generation.ipynb  inverse-model.ipynb  inverse-multicompartment.ipynb
profile/: config.yaml
resources/: brain-2d-domain.hdf
sandbox/: dolfin-adjoint.py
scripts/: collect_grid_value.py  collect_mesh_data.py  create_errortable.py  datageneration2d.py  diffusion_reaction_gridsearch.py  diffusion_reaction_minimization.py  extract_timestamps.py  generate_data_1D.py  grid_scheduler.py  hdf2k3d.py  interpolation-error.py  measure.py  mri2fem.py  multicomp_gridsearch.py  optimal.py  optimal_diffusion_coefficient.py  simulate_data.py  singlecompartment.py  singlecompartment_convergence.py  singlecompartment_eval_point.py  test3d_interp.py  test_script_evaluate.py  twocomp_gridsearch.py  twocompartment.py  twocompartment_convergence.py  twocompartment_eval_point.py  voxel_center_minimization.py
src/glymphopt/: assigners.py  blood.py  cache.py  coefficientvectors.py  datageneration.py  dfa.py  differentiation.py  domain.py  finite_differences.py  forward.py  grid_scheduler.py  interpolation.py  interpolator.py  io.py  io_utils.py  measure.py  minimize.py  minimize_grid_search.py  mri_loss.py  operators.py  param_utils.py  parameters.py  postprocessing.py  scale.py  singlecompartment.py  taylor.py  timestepper.py  twocompartment.py  utils.py  visual.py
