[project]
authors = [{ name = "Jørgen Riseth", email = "jnriseth@gmail.com" }]
dependencies = []
name = "glymphopt"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = [
  "conda-forge/label/fenics-dev",
  "conda-forge",
  "jorgenriseth",
  "bioconda",
  "https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public",
]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
glymphopt = { path = ".", editable = true }
gmri2fem = { path = "./deps/gmri2fem", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
snakemake = ">=8"
svmtk = "*"
fenics = "*"
dcm2niix = "*"
numpy = "*"
matplotlib = "*"
scipy = "*"
scikit-image = "*"
jupyter = "*"
panta-rhei = ">=0.7"
mpi4py = "*"
openmpi = "*"
snakemake-executor-plugin-cluster-generic = "*"
pyvista = "<0.45"
trame = "*"
tqdm = "*"
loguru = "*"
meshio = "*"
setuptools = "<80"
notebook = "<7"
jupyter_server = "<2"
