[project]
authors = [{ name = "Jørgen Riseth", email = "jnriseth@gmail.com" }]
dependencies = []
name = "glymphopt"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = [
  "conda-forge/label/fenics-dev",
  "conda-forge",
  "jorgenriseth",
  "bioconda",
  "https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public",
]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
glymphopt = { path = ".", editable = true }
gmri2fem = { path = "./deps/gmri2fem", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
snakemake = ">=9.9.0,<10"
svmtk = ">=2.0.1,<3"
fenics = ">=2019.2.0.dev20240219,<2020"
dcm2niix = ">=1.0.20250506,<2"
numpy = ">=2.3.2,<3"
matplotlib = ">=3.10.5,<4"
scipy = ">=1.16.0,<2"
scikit-image = ">=0.25.2,<0.26"
jupyter = ">=1.1.1,<2"
panta-rhei = ">=0.6.2,<0.7"
mpi4py = ">=4.1.0,<5"
openmpi = ">=5.0.8,<6"
snakemake-executor-plugin-cluster-generic = ">=1.0.9,<2"
pyvista = ">=0.45.3,<0.46"
trame = ">=3.11.0,<4"
tqdm = ">=4.67.1,<5"
loguru = ">=0.7.3,<0.8"
meshio = ">=5.3.5,<6"
setuptools = ">=80.9.0,<81"
notebook = ">=7.4.4,<8"
jupyter_server = ">=2.16.0,<3"

[tool.pixi.activation]
